kubernetes/apps/keyb/dev/frontend/deploymentPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyb-frontend
spec:
  selector:
    matchLabels:
      app: keyb-frontend-dev
  template:
    spec:
      containers:
      - name: keyb-frontend
        image: ghcr.io/keybio/frontend/frontend:develop
        ports:
        - name: http
          containerPort: 4010
